# ur_grinding

./: README.md
alignment/: CMakeLists.txt  package.xml
alignment/src/: alignment.cpp
bezier-pcl_dep/: CMakeLists.txt  package.xml
bezier-pcl_dep/include/bezier/: bezier_library.hpp
bezier-pcl_dep/meshes/: dilated_mesh.stl  extrication_mesh.stl
bezier-pcl_dep/src/: bezier_library.cpp  surfacing.cpp
comparison/: CMakeLists.txt  package.xml
comparison/src/: comparison.cpp
fanuc_grinding/: package.xml
path_planning/: CMakeLists.txt  package.xml
path_planning/src/: path_planning.cpp  test.cpp
path_planning/srv/: PathPlanningService.srv
post_processor/: CMakeLists.txt  package.xml
post_processor/src/: post_processor.cpp
publish_meshfile/: CMakeLists.txt  package.xml
publish_meshfile/src/: publish_meshfile.cpp
rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_plugin/config/: robot_state_visualize.rviz
rviz_plugin/launch/: aa.launch  aaa.launch  r1000ia_sls_2.launch  ur_grinding.launch  ur_grinding_demo.launch
rviz_plugin/src/: alignment_widget.cpp  comparison_widget.cpp  fanuc_grinding_rviz_plugin.cpp  fanuc_grinding_rviz_plugin.h  path_planning_widget.cpp  path_planning_widget.h  post_processor_widget.cpp  scanning_widget.cpp  ur_grinding_rviz_plugin.cpp  ur_grinding_rviz_plugin.h
scanning/: CMakeLists.txt  package.xml
scanning/meshes/: DAC_580813_defect.ply  aa.ply  test.ply
scanning/src/: scanning.cpp
scanning/srv/: ScanningService.srv
scanning/yaml/: camera_calibration.yaml
